fixed horizontal scroll on 1500px screen size

--- a/css/style.scss
+++ b/css/style.scss
@@ -89,7 +89,7 @@ body {
         top: -56px;
         img {
             min-width: 100%;
-            max-width: max(100%, 410px);
+            max-width: max(100%, 390px);
         }
         ;
     }
